[MOSIP-8292] added auth type status changes