@@ -88,23 +88,11 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>${maven.compiler.version}</version>
-					<configuration>
-						<source>${maven.compiler.source}</source>
-						<target>${maven.compiler.target}</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven.surefire.plugin.version}</version>
 					<configuration>
 						<skip>false</skip>
 						<useFile>false</useFile>
-						<argLine>
-							--illegal-access=permit
-						</argLine>						
 					</configuration>
 				</plugin>
 				<plugin>
@@ -131,7 +119,6 @@
 					<version>${maven.javadoc.version}</version>
 					<configuration>
 						<aggregate>true</aggregate>
-						<doclint>none</doclint>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -200,15 +187,6 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven.javadoc.version}</version>
-				<configuration>
-					<aggregate>true</aggregate>
-					<doclint>none</doclint>
-				</configuration>
-			</plugin>			
 		</plugins>
 	</build>
 </project>
